platform-services/janitor-bot/tests/snapshots/integration__argocd_sync__app-not-changed.snap
---
source: tests/integration.rs
expression: snapshot
---
response: []
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/git/commits/abc1234567890def?stat=false&verification=false&files=true
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/raw/system-components/monitoring.application.yaml?ref=abc1234567890def
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/git/commits/abc1234567890def?stat=false&verification=false&files=true
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/raw/system-components/monitoring.application.yaml?ref=abc1234567890def
    service: forgejo
